--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Игра "Камень, Ножницы, Бумага"</h1>
+    <button id="rock">Камень</button>
+    <button id="scissors">Ножницы</button>
+    <button id="paper">Бумага</button>
+
+    <h2 id="result"></h2>
+    <h3>Ваш счет: <span id="playerScore">0</span></h3>
+    <h3>Счет компьютера: <span id="computerScore">0</span></h3>
     <script src="./main.js"></script>
 </body>
 </html>
